Removed initial intro + added some new images

--- a/Quantum Chemistry PyData talk.ipynb
+++ b/Quantum Chemistry PyData talk.ipynb
@@ -65,33 +65,6 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
-       "slide_type": "slide"
-      }
-     },
-     "source": [
-      "What is quantum chemistry?\n",
-      "====================\n",
-      "\n",
-      "\"Quantum chemistry is a branch of chemistry whose primary focus is the application of quantum mechanics in physical models and experiments of chemical systems. It involves heavy interplay of experimental and theoretical methods.\" Wikipedia 2014\n",
-      "\n",
-      "<img src=files/chemistry.jpg width=200></img> <img src=files/mechanism.png width=450></img> <img src=files/spectra.gif width=250></img>"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "notes"
-      }
-     },
-     "source": [
-      "Used for many things including computing rates, analysing spectra, determining mechanisms, and generally peering into natures beating heart."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
        "slide_type": "subslide"
       }
      },
@@ -473,7 +446,7 @@
       }
      },
      "source": [
-      "Reasonable documentation for keywords:"
+      "Reasonable documentation for keywords, but full control of the program involves use of special machine codes known as IOPS which requires what amounts to an apprentership with one of the old masters who have the requisit knowledge."
      ]
     },
     {
@@ -484,29 +457,7 @@
       }
      },
      "source": [
-      "<iframe src=http://www.gaussian.com/g_tech/g_ur/l_keywords09.htm width=700 height=700 seamless align=\"center\"></iframe>"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
-     "source": [
-      "But full control of the program involves use of special machine codes known as IOPS which requires what amounts to an apprentership with one of the old masters who have the requisit knowledge."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "fragment"
-      }
-     },
-     "source": [
-      "(You attempt to please the master by performing suitable tasks in the hope you will be rewarded by the secret knowledge).\n",
+      "(You attempt to please the master by completing assignments in the hope you will be rewarded by the secret knowledge).\n",
       "\n",
       "<img src='files/apprentices.jpg' width=500 height=500></img>"
      ]
@@ -1113,15 +1064,10 @@
      ]
     },
     {
-     "cell_type": "heading",
-     "level": 3,
-     "metadata": {
-      "slideshow": {
-       "slide_type": "slide"
-      }
-     },
+     "cell_type": "markdown",
+     "metadata": {},
      "source": [
-      "Culture"
+      "Workflow summary:"
      ]
     },
     {
@@ -1132,11 +1078,11 @@
       }
      },
      "source": [
-      "Overview of literature description of calculcations. \n",
+      "In research papers, methodology reported with brief summary of method and numerical approximation used.\n",
       "\n",
-      "Overview of additional materials e.g. structure coordinates, input files or the lack there of\n",
+      "If you are lucky there is some additional information, but even then it is usually in the form of text files full of atomic coordinates.\n",
       "\n",
-      "Reference to the variation of difficulty repeating calculations - can be easy or, can be a nightmare due to hidden gotchas (are your wavefunctions stable??)."
+      "This means repeating literature calculcations can be easy or, can be a nightmare due to hidden gotchas that are not mentioned in the papers."
      ]
     },
     {
@@ -1161,7 +1107,7 @@
      "source": [
       "Legacy quantum chemistry codes dominate quantum chemical research due to the large amount research and development poured into them and hence the wide range of methods they have available. \n",
       "\n",
-      "However individual research workflows using them are less efficient than they might be.\n",
+      "However whilst method development and computer power now mean we can treat thousands of atoms instead of two, the procedures in place governing input and output remain as if we were just treating two thus individual research workflows are much less efficient than they might be.\n",
       "\n",
       "Exchange of information in the scientific literature is limited by both the culture and the toolset commonly used.\n",
       "\n",
@@ -1529,7 +1475,7 @@
      "source": [
       "**Molmod**\n",
       "\n",
-      "Molecular modelling toolkit offer definition of a molecule like the ASE except in the form of a Molecule class:"
+      "Molecular modelling toolkit offers definition of a molecule like the ASE except in the form of a Molecule class:"
      ]
     },
     {
